# ai-deep-research-agent

./: .env.example  .gitignore  CHANGELOG.md  CONFIGURATION_MIGRATION.md  DYNAMIC_GAP_SOLUTION.md  Makefile  README.md  REAL_AI_COMPLETE.md  TEST_CLEANUP_SUMMARY.md  VERSION_MANAGEMENT.md  VERSION_MANAGEMENT_VENV.md  __init__.py  build_docs.py  debug_gemini.py  demo_complete.py  demo_signal_handling.py  dynamic_gap_analysis_improvements.py  generate_report_from_session.py  main.py  manage_version.py  pyproject.toml  quick_test.py  release.sh  requirements.txt  run_tests.py  test_ai_generation.py  test_candidate_parsing.py  test_complete_optimization.py  test_context_length.py  test_conversation_fix.py  test_conversation_mode_intelligence.py  test_dynamic_gaps.py  test_exact_flow.py  test_fallback_improvements.py  test_foundation.py  test_gemini_timeout.py  test_optimized_context.py  test_pure_ai_questions.py  test_real_ai_optimized.py  test_real_research.py  (+4 more)
.github/: 000_Copilot_Instructions.md  001_Main System Prompt.prompt.md  002_Supplementary Prompt 1: Research Engine Implementation.prompt.md  003_Supplementary Prompt 2: Report Generation System.prompt.md  004_Supplementary Prompt 3: Configuration & Session Management.prompt.md  005_Supplementary Prompt 4: User Interface & Interaction Design.prompt.md  006_Supplementary Prompt 5: Deployment & Production.prompt.md
.github/workflows/: ci.yml
config/: settings.py  settings.yaml
core/: __init__.py  ai_question_generator.py  completion_assessment.py  context_analyzer.py  conversation.py  conversation_memory.py  conversation_mode_intelligence.py  conversation_state.py  dialogue_logic.py  dynamic_personalization.py  intent_analyzer.py  report_generator.py  research_engine.py
docs/: Deep Research Agent - ProjectSage Analysis.ipynb  FOUNDATION_COMPLETE.md  NEXT_STEPS.md  README.md  VERSION_MANAGEMENT.md  WORK_BREAKDOWN_v020.md  project_requirement_document_for_v020.md  sonnet_project_creation.md  sonnet_secondtry.md
tests/: README.md  __init__.py  conftest.py  conversation.prompt.md  test_ai_question_generator.py  test_completion_assessment.py  test_context_analyzer.py  test_conversation.py  test_conversation_memory.py  test_conversation_state.py  test_dialogue_logic.py  test_dynamic_personalization.py  test_integration.py  test_intent_analyzer.py  test_research_engine_errors.py  test_security.py  test_session_cleanup.py  test_session_manager.py  test_settings.py  test_signal_handling.py  test_validators.py
tests/fixtures/: sample_sessions.json
utils/: session_manager.py  validators.py
