[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-agent"
dynamic = ["version"]
description = "AI-powered decision support through multi-stage iterative research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "research", "decision-support", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pdoc>=15.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/deep-research-agent"
"Bug Reports" = "https://github.com/yourusername/deep-research-agent/issues"
"Source" = "https://github.com/yourusername/deep-research-agent"

[project.scripts]
dra = "deep_research_agent.main:main"

[tool.setuptools.dynamic]
version = {attr = "deep_research_agent.__version__"}

[tool.setuptools.packages.find]
include = ["deep_research_agent*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=. --cov-report=term-missing"

# Custom markers for test categorization
markers = [
    "priority1: Priority 1 critical tests that must pass",
    "priority2: Priority 2 important tests",  
    "priority3: Priority 3 nice-to-have tests",
    "security: Security and vulnerability tests",
    "integration: Integration tests between components",
    "unit: Unit tests for individual functions/classes",
    "regression: Regression tests for bug prevention",
    "performance: Performance and load tests",
    "slow: Tests that take a long time to run",
    "fast: Quick tests for rapid feedback",
    "core: Core business logic tests",
    "config: Configuration and settings tests",
    "validation: Input validation and sanitization tests",
    "ai: Tests requiring AI/API integration",
    "smoke: Basic smoke tests for core functionality",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.generativeai.*",
    "yaml.*",
]
ignore_missing_imports = true
